repaired wrong width in chrome

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -30,6 +30,7 @@
 .slick-list.draggable
 {
     height: 100%;
+    width: 100%;
 }
 .slick-track
 {
